--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ paper, in speech or on other media.</p>
 <h3>Do you need both HTML and CSS?</h3>
 <p>Although it is generally recommended that aspiring Web designers and developers learn how to read and write HTML code first, that doesn't mean you can ignore CSS altogether. Without CSS, your pages will be visually limited to the formatting and stylistic tags available in HTML.</p>
 </section>
-<p class='reference'>Learn more about HTML and CSS with a free course from <a href='https://www.freecodecamp.org/'>freeCodeCamp</p></a>
+<p class='reference'>Learn more about HTML and CSS with a free course from <a target="_blank" href='https://www.freecodecamp.org/'>freeCodeCamp</p></a>
 </main>
 </body>
 </html>
